cabal/tests/pos/string00.hs
module Str0 where

import Language.Haskell.Liquid.Prelude

foo = "dog"

prop1 = assert (0 == 0)	
prop2 = assert (1 /= 0)
